--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,11 @@
 <!doctype html>
+<html>
   <head>
     <title>  </title>
   </head>
 <body>
-  <h1>Hi </h1>
 
+  <h1> hi</h1>
+  
 </body>
 </html>
