--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,23 @@
+<!doctype html>
 <html>
+  <head>
+    <title>About Shamima</title>
+ </head>
 <body>
+  
+<h1><b>About me<b></h1>
+  
+  <h2>Shamima Sharmin</h2>
+  
+  <p>I`m a current student at Midwood High School and <br> all of my interests revolve around engineering and tech. <br>
+    I have done hands on engineering before at an aprenceship at NYU Tech. <br>
+    I`m taking online course at Udacity to learn html, css and web development. <br>
+    Currently im doing girls who code and <br> this is a project for todays class. A portfolio about me!<br>
+  </p>
+  
+ <img src="http://www.pngmart.com/files/4/Cute-Cartoon-Girl-PNG-Transparent-Picture.png">
+ 
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
 
 </body>
 </html>
