--- a/aboutme.html
+++ b/aboutme.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href=" "> 
     <title>About Shamima</title>
  </head>
-<body>
+<body style="font-size: 300%" >
   
-<h1><b>About me</b></h1>
+<h1 ><b>About me</b></h1>
   <h2>Shamima Sharmin</h2>
   
   <p>I`m a current student at Midwood High School and<br>
