--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 <body style="font-size: 260%" >
   
 <h1 style="text-align:center;" ><b>About me</b></h1>
-  <h2> Shamima Sharmin</h2>
+  <h2 style="text-align:right;" > Shamima Sharmin</h2>
   
   <p>I`m a current student at Midwood High School and<br>
     all of my interests revolve around engineering and tech.<br>
