--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href=" "> 
     <title>About Shamima</title>
  </head>
-<body style="font-size: 260%; font-family: courier; margin-padding: 200px; border: dotted; background-color: #FFB6C1;" >
+<body style="font-size: 260%; font-family: courier; padding: 90px; border: dotted; background-color: #FFB6C1;" >
   
 <h1 style="text-align:center;" ><b>About me</b></h1>
   <h2 style="text-align:right;"> Shamima Sharmin</h2>
