--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href=" "> 
     <title>About Shamima</title>
  </head>
-<body style="font-size: 260%; font-family: courier; padding: 90px; border: dotted; border-color: black; border-size:4px 
+<body style="font-size: 260%; font-family: courier; padding: 90px; border: dotted; border-color: black; border-thickness: 4px; 
              background-color: #FFB6C1;" >
   
 <h1 style="text-align:center;" ><b>About me</b></h1>
