--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
 <h1 style="text-align:center;" ><b>About me</b></h1>
   <h2 style="text-align:right;"> Shamima Sharmin</h2>
   
-  <p style="text-align:left;" >I`m a current student at Midwood High School and<br>
+  <p style="text-align:right;" >I`m a current student at Midwood High School and<br>
     all of my interests revolve around engineering and tech.<br>
     I have done hands on engineering before at an aprenceship at NYU Tech. <br>
     I`m taking online course at Udacity to learn html, css and web development.<br>
