--- a/aboutme.html
+++ b/aboutme.html
@@ -12,10 +12,13 @@
   
   <p style="text-align:right;" >I`m a current student at Midwood High School and<br>
     all of my interests revolve around engineering and tech.<br>
-    I have done hands on engineering before at an aprenceship at NYU Tech. <br>
-    I`m taking online course at Udacity to learn html, css and web development.<br>
+    I have done hands on engineering <br>
+    before at an aprenceship at NYU Tech. <br>
+    I`m taking online course at Udacity<br>
+    to learn html, css and web development.<br>
     Currently im doing girls who code and <br>
-    this is a project for todays class. A portfolio about me!<br>
+    this is a project for todays class.<br>
+    A portfolio about me!<br>
   </p>
   
  <img id="Me" src="http://www.pngmart.com/files/4/Cute-Cartoon-Girl-PNG-Transparent-Picture.png" width="160px" 
