--- a/aboutme.html
+++ b/aboutme.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" href=" "> 
+    <link rel="stylesheet" href="aboutme.css"> 
     <title>About Shamima</title>
 </head>
-<body style="font-size: 260%; font-family: courier; padding: 90px; border: dotted; border-color: black; border-thickness: 9px; 
-             background-color: #FFB6C1;">
+<body>
   
 <h1 style="text-align:center;" ><b>About me</b> </h1>
   <h2 style="text-align:right;"> Shamima Sharmin</h2>
