--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   
-<h1 style="text-align:center;" ><b>About me</b> </h1>
+<h1><b>About me</b> </h1>
  <h2 style="text-align:right;"> Shamima Sharmin</h2>
   
   <p style="text-align:right;" >I`m a current student at Midwood High School and<br>
