--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 <body>
   
 <h1><b>About me</b> </h1>
- <h2 style="text-align:right;"> Shamima Sharmin</h2>
+ <h2>Shamima Sharmin</h2>
   
   <p style="text-align:right;" >I`m a current student at Midwood High School and<br>
     all of my interests revolve around engineering and tech.<br>
@@ -41,7 +41,7 @@
        Most of the girls in my school want to <br>
        be doctors or some kind of business person. </p>
   
-  <h4 style="text-align:center;"><b>Dislikes</b> </h4>
+  <h4><b>Dislikes</b></h4>
    
  <img id="orange" src="https://t3.ftcdn.net/jpg/00/99/56/26/240_F_99562611_EIZ4AssrFTz1UNyOmM8KAChSeQNu5nMA.jpg"
       width="140px" height="140px"> 
@@ -64,7 +64,7 @@
          I barely go to places with a lot of people due <br> 
          to the sound and and fear of doing something wrong. <br> </p>
   
-  <h5 style="text-align:center;" ><b>Fav Websites</b></h5>
+  <h5><b>Fav Websites</b></h5>
   
 <img id="Udacity" src="https://d125fmws0bore1.cloudfront.net/assets/udacity_share-46db4b8faf075a5af5a1070a7fa0ad3639783609ff45f447e4ea467fe3aa9d32.png" width="340px" height="200px">
       <p>To Udacity`s online classes, I have felt more confident. <br>
