--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 <h1><b>About me</b></h1>
 <h2>Shamima Sharmin</h2>
   
-  <p1 style="text-align:right;" >I`m a current student at Midwood High School and<br>
+  <p style="text-align:right;" >I`m a current student at Midwood High School and<br>
     all of my interests revolve around engineering and tech.<br>
     I have done hands on engineering <br>
     before at an aprenceship at NYU Tech. <br>
@@ -18,7 +18,7 @@
     Currently im doing girls who code and <br>
     this is a project for todays class.<br>
     A portfolio about me!<br>
-  </p1>
+  </p>
   
  <img id="Me" src="http://www.pngmart.com/files/4/Cute-Cartoon-Girl-PNG-Transparent-Picture.png">
   
