--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
   
 <h1><b>About me</b></h1>
 <h2>Shamima Sharmin</h2>
-  <div class="row" 
+  <div class="row" >
        <div clas="Column-one">
   <p style="text-align:right;">
     I`m a current student at Midwood High School and <br>
