--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 <h1><b>About me</b></h1>
 <h2>Shamima Sharmin</h2>
   <div class="row">
-       <div clas="Column-one">
+       <div clas="Column-two">
   <p style="text-align:right;">
     I`m a current student at Midwood High School and <br>
     all of my interests revolve around engineering and tech. <br>
@@ -22,7 +22,7 @@
     A portfolio about me!<br>
   </p>
   </div>
-  <div class="Column-two"> 
+  <div class="Column-one"> 
  <img id="Me" src="http://www.pngmart.com/files/4/Cute-Cartoon-Girl-PNG-Transparent-Picture.png">
   </div>
   </div>
