--- a/aboutme.html
+++ b/aboutme.html
@@ -8,8 +8,9 @@
 <body>
   
 <h1><b>About me</b></h1>
+  
+  
   <div class="column"> 
-    
 <h2>Shamima Sharmin</h2>
   <p style="text-align:right;">
     I`m a current student at Midwood High School and <br>
@@ -37,7 +38,7 @@
   </div>
       
   <div class="column">
-  <img id="Bubble" src="https://img.grouponcdn.com/deal/sTNpcAQhCD6vg2gN6eea/Xt-2048x1229/v1/c700x420.jpg" alt="Bubble Tea">> 
+  <img id="Bubble" src="https://img.grouponcdn.com/deal/sTNpcAQhCD6vg2gN6eea/Xt-2048x1229/v1/c700x420.jpg" alt="Bubble Tea"> 
       <p>Bubble Tea! My favorite is Tairo.<br> I usually drink them when Im feeling stressed or tired.</p>
   </div>
   
