--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
 <body>
   
 <div class="column"> 
-<h1><b>About Me</b> </h1>
+<h1><b>About Me</b></h1>
 <h2>Shamima Sharmin</h2>
   </div>
   
@@ -52,6 +52,7 @@
        be doctors or some kind of business person. </p>
   </div>
   
+  <div class="row2"> 
   <div class="column">
   <h4><b>Dislikes</b></h4>
  <img id="orange" src="https://t3.ftcdn.net/jpg/00/99/56/26/240_F_99562611_EIZ4AssrFTz1UNyOmM8KAChSeQNu5nMA.jpg" alt="Orange"> 
@@ -80,7 +81,7 @@
          I barely go to places with a lot of people due <br> 
          to the noises and a lot of things happening all at once. <br>
     </p>
-  </div>
+    </div> </div>
   
     <div class="column"> 
   <h5><b>Fav Websites</b></h5>
