--- a/aboutme.html
+++ b/aboutme.html
@@ -110,5 +110,10 @@
          to relax but also be informed about the world. <br> 
     </p> 
   </div>
+  
+  <div class="column"> 
+    <h6>Fun Fact</h6>
+    <p>I can`t swim. Never really got the chance to. </p>
+  </div> 
 </body>
 </html>
