--- a/aboutme.html
+++ b/aboutme.html
@@ -111,7 +111,7 @@
     </p> 
   </div>
   
-  <div class="column"> 
+  <div class="Fun"> 
     <h6>Fun Fact</h6>
     <p>I can`t swim. Never really got the chance to. </p>
   </div> 
