--- a/aboutme.html
+++ b/aboutme.html
@@ -108,9 +108,7 @@
     </p> 
   </div>
   
-  <div class="Fun"> 
-    <h6>Fun Fact</h6>
-    <p>I can`t swim. Never really got the chance to. </p>
-  </div> 
+  <h6>Fun Fact </h6>
+  <p> I cant swim.</p>
 </body>
 </html>
