--- a/aboutme.html
+++ b/aboutme.html
@@ -64,11 +64,9 @@
 <img id="Ads" src="http://adsoftheworld.com/apple-touch-icon.png" alt="Ads"> 
     <p>Too many ads! <br>
          Ads are okay until <br>
-         they slow down your internet speed.<br>
-         Like I don`t even get a chance <br>
-         to check my yahoo email <br>
-         due to the amount of ads that pop up. <br>
-         It evens makes me feel unsafe. <br>
+         they slow down your internet speed. Like I don`t even get a chance <br>
+         to check my yahoo email 
+         due to the amount of ads that pop up. It evens makes me feel unsafe.
     </p>
   </div>
   
