--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <link rel="stylesheet" href="aboutme.css"> 
+    <div>
+          <a href="aboutme.html">Home</a>
+          <a href="Hobbies.html">Hobbies</a>
+   </div>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>About Shamima</title>
 </head>
