--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="aboutme.css"> 
-    <div>
+    <div id="Menu">
           <a href="aboutme.html">Home</a>
           <a href="Hobbies.html">Hobbies</a>
    </div>
