--- a/Hobbies.html
+++ b/Hobbies.html
@@ -2,6 +2,10 @@
 <html>
 <head>
  <link rel="stylesheet" href="Hobbies.css"> 
+  <div id="Menu">
+          <a href="aboutme.html">Home</a>
+          <a href="Hobbies.html">Hobbies</a>
+</div>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 <title> Hobbies</title>
 </head>
