--- a/aboutme.html
+++ b/aboutme.html
@@ -108,6 +108,15 @@
     </p> 
   </div>
   
+  <p id="demo">A Paragraph</p>
+<button type="button" onclick="myFunction()">Fun Fact</button>
+
+<script>
+function myFunction() {
+   document.getElementById("demo").innerHTML = "Paragraph changed.";
+}
+</script>
+  
   <h6>Fun Fact </h6>
   <p> I cant swim.</p>
 </body>
