--- a/aboutme.html
+++ b/aboutme.html
@@ -113,11 +113,8 @@
 
 <script>
 function myFunction() {
-   document.getElementById("demo").innerHTML = "Paragraph changed.";
+   document.getElementById("demo").innerHTML = "I cant swim.";
 }
 </script>
-  
-  <h6>Fun Fact </h6>
-  <p> I cant swim.</p>
 </body>
 </html>
