--- a/aboutme.html
+++ b/aboutme.html
@@ -108,7 +108,7 @@
     </p> 
   </div>
   
-  <p id="demo">A Paragraph</p>
+  <p id="demo">Fun Fact: Click on Button.</p>
 <button type="button" onclick="myFunction()">Fun Fact</button>
 
 <script>
