--- a/aboutme.html
+++ b/aboutme.html
@@ -10,6 +10,7 @@
     <title>About Shamima</title>
 </head> 
 <body> 
+  alert("Welcome to my Site!");
    
 <h1><b>About Me</b></h1>  
 <h2>Shamima Sharmin</h2> 
