--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <head>
+  <head alert("Welcome to my Site!");>
     <link rel="stylesheet" href="aboutme.css"> 
     <div id="Menu">
           <a href="aboutme.html">Home</a>
@@ -9,7 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>About Shamima</title> 
 </head>  
-   alert("Welcome to my Site!");
 <body> 
    
 <h1><b>About Me</b></h1>  
