--- a/aboutme.html
+++ b/aboutme.html
@@ -1,11 +1,16 @@
 <!doctype html>
 <html>
-  <head alert("Welcome to my Site!");>
+  <head>
     <link rel="stylesheet" href="aboutme.css"> 
     <div id="Menu">
           <a href="aboutme.html">Home</a>
           <a href="Hobbies.html">Hobbies</a>  
    </div> 
+    
+    <script>
+      alert("Welcome to my Site!");
+      </script>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>About Shamima</title> 
 </head>  
