--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,7 @@
      
     <script> 
       alert("Welcome to my Site!");
+      <img src="https://media.giphy.com/media/CtV5OZL7AV3tm/giphy.gif" alt="Welcome"> 
       </script>
     
     <script>
