--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
      
     <script>  
       alert("Welcome to my Site!");
-      <img src="https://media.giphy.com/media/CtV5OZL7AV3tm/giphy.gif" alt="Welcome"> 
+      <img src="http://www.clker.com/cliparts/3/W/4/Q/s/w/girl-ballons-hi.png" alt="Welcome"> 
       </script>
     
     <script>
