--- a/aboutme.html
+++ b/aboutme.html
@@ -6,10 +6,10 @@
           <a href="aboutme.html">Home</a>
           <a href="Hobbies.html">Hobbies</a>   
    </div>  
+    <script>
+      alert("Welcome!");
+    </script> 
      
-    <script>    
-      alert("Welcome to my Site!");
-      </script>
     
     <script>
 function bigImg(x) {
