--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
           <a href="aboutme.html">Home</a>
           <a href="Hobbies.html">Hobbies</a>   
    </div>  
-    <script>
+    <script type="application/javascript" src="chrome://hello/content/alert_prompt.js">
       alert("Welcome!");
     </script> 
      
