--- a/aboutme.html
+++ b/aboutme.html
@@ -135,13 +135,13 @@ function normalImg(x) {
     </p> 
   </div>
   
-  <p id="demo">Fun Fact: Click on Button.</p>
-<button type="button" onclick="myFunction()">Fun Fact</button>
+  <p id="button">Fun Fact: Click on Button.</p>
+<button id="demo" type="button" onclick="myFunction()">Fun Fact</button>
 
 <script>
 function myFunction() {
-   document.getElementById("demo").innerHTML = "   I cant swim.";
-}
+   document.getElementById("demo").innerHTML = "I cant swim.";
+} 
 </script>
 </body>
 </html>
