--- a/aboutme.html
+++ b/aboutme.html
@@ -135,7 +135,7 @@ function normalImg(x) {
     </p> 
   </div>
   
-  <p id="button">Fun Fact: Click on Button.</p>
+  <p id="button">Fun Fact: Click on Button. (Then refresh thanks.)</p>
 <button id="demo" type="button" onclick="myFunction()">Fun Fact</button>
 
 <script>
