--- a/aboutme.html
+++ b/aboutme.html
@@ -142,6 +142,7 @@ function normalImg(x) {
 function myFunction() {
    document.getElementById("demo").innerHTML = "I cant swim.";
 } 
+  <button id="demo" style="vertical-align:middle"><span>Hover </span></button>
 </script>
 </body>
 </html>
