--- a/aboutme.html
+++ b/aboutme.html
@@ -136,13 +136,12 @@ function normalImg(x) {
   </div>
   
   <p id="button">Fun Fact: Click on Button. (Then refresh thanks.)</p>
-<button id="demo" type="button" onclick="myFunction()">Fun Fact</button>
+<button id="demo" style="vertical-align:middle"><span>Fun </span></button>
 
 <script>
 function myFunction() {
    document.getElementById("demo").innerHTML = "I cant swim.";
 } 
-  <button id="demo" style="vertical-align:middle"><span>Hover </span></button>
 </script>
 </body>
 </html>
