--- a/aboutme.html
+++ b/aboutme.html
@@ -136,7 +136,7 @@ function normalImg(x) {
   </div>
   
   <p id="button">Fun Fact: Click on Button. (Then refresh thanks.)</p>
-<button id="demo" style="vertical-align:middle"><span>Fun </span></button>
+<button id="demo" style="vertical-align:middle"><span>Fun Fact</span></button>
 
 <script>
 function myFunction() {
