--- a/aboutme.html
+++ b/aboutme.html
@@ -34,9 +34,10 @@ function normalImg(x) {
 <body> 
 <h1><b>About Me</b></h1>  
 <h2>Shamima Sharmin</h2> 
+  <center>
  <img id="Me" src="http://www.pngmart.com/files/4/Cute-Cartoon-Girl-PNG-Transparent-Picture.png" alt="Cartoon girl" 
       onmouseover="bigImg(this)" onmouseout="normalImg(this)">
-
+  </center>
   <p style="text-align:right;">
     I`m a current student at Midwood High School and <br>   
     all of my interests revolve around engineering and tech. <br> 
