--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
      
     <script>
 function myFunction() {
-   document.getElementById("button").innerHTML = "I cant swim.";
+   document.getElementById("demo").innerHTML = "I cant swim.";
 } 
 </script>
     
