--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,32 @@ function normalImg(x) {
     x.style.width = "300px";
 }
 </script>
-    
+    ================================================================================================
+    function ExpandOn(topicID){
+var expand=document.getElementById(topicID);
+if(!expand)return true;
+expand.style.display="block"
+return true;
+}
+
+function ExpandOff(topicID){
+var expand=document.getElementById(topicID);
+if(!expand)return true;
+expand.style.display="none"
+return true;
+}
+
+function ExpandToggle(topicID){
+var expand=document.getElementById(topicID);
+if(!expand)return true;
+if(expand.style.display=="none"){
+expand.style.display="block"
+} else {
+expand.style.display="none"
+}
+return true;
+}
+    ==================================================================================================================
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>About Shamima</title> 
 </head>  
