--- a/aboutme.html
+++ b/aboutme.html
@@ -39,6 +39,7 @@ function normalImg(x) {
       onmouseover="bigImg(this)" onmouseout="normalImg(this)">
   </center>
   
+  <script>
    function ExpandOn(topicID){ 
 var expand=document.getElementById(topicID);
 if(!expand)return true; 
@@ -63,6 +64,7 @@ expand.style.display="none"
 }
 return true;
 }
+  </script>
 
   <p style="text-align:right;">
     I`m a current student at Midwood High School and <br>   
