--- a/aboutme.html
+++ b/aboutme.html
@@ -53,6 +53,9 @@ return true;
 }
   </script>
     
+    [ <span title="Click to expand this topic or to contract a topic which has already been expanded" class="expand"
+            onClick="return ExpandToggle('topic1')">Click to Expand and see the code to insert</span>&nbsp;] 
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>About Shamima</title> 
 </head>   
@@ -63,6 +66,7 @@ return true;
  <img id="Me" src="http://www.pngmart.com/files/4/Cute-Cartoon-Girl-PNG-Transparent-Picture.png" alt="Cartoon girl" 
       onmouseover="bigImg(this)" onmouseout="normalImg(this)">
   </center>
+  <div id="topic1" class="expandedblock" style="display:none">
   
   <p style="text-align:right;">
     I`m a current student at Midwood High School and <br>   
@@ -76,6 +80,7 @@ return true;
     this is a project for todays class.<br>
     A portfolio about me!<br>
   </p> 
+  </div> 
   </div> 
   
     <div class="column">
