--- a/aboutme.html
+++ b/aboutme.html
@@ -54,7 +54,7 @@ return true;
   </script>
     
     [ <span title="Click to see more" class="expand"
-            onClick="return ExpandToggle('topic1')">Click to Expand and see the code to insert</span>&nbsp;] 
+            onClick="return ExpandToggle('topic1')">Click to see more</span>&nbsp;] 
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>About Shamima</title> 
