--- a/aboutme.html
+++ b/aboutme.html
@@ -31,8 +31,7 @@ function normalImg(x) {
     <script> 
    function ExpandOn(topicID){ 
 var expand=document.getElementById(topicID);
-if(!expand)return true; 
-expand.style.display="block" 
+if(!expand)return true; /* knl*/ 
 return true; 
 } 
 function ExpandOff(topicID){
