--- a/aboutme.html
+++ b/aboutme.html
@@ -31,7 +31,7 @@ function normalImg(x) {
     <script> 
    function ExpandOn(topicID){ 
 var expand=document.getElementById(topicID);
-if(!expand)return true; /* knl*/ 
+if(!expand)return true; /* expand.style.display="block" */ 
 return true; 
 }  
 function ExpandOff(topicID){
@@ -43,8 +43,7 @@ return true;
 function ExpandToggle(topicID){
 var expand=document.getElementById(topicID);
 if(!expand)return true;
-if(expand.style.display=="none"){
-expand.style.display="block"
+if(expand.style.display=="none"){  /*expand.style.display="block" */ 
 } else {
 expand.style.display="none"
 }
