--- a/aboutme.html
+++ b/aboutme.html
@@ -31,7 +31,8 @@ function normalImg(x) {
     <script> 
    function ExpandOn(topicID){ 
 var expand=document.getElementById(topicID);
-if(!expand)return true; /* expand.style.display="block" */ 
+if(!expand)return true; 
+     expand.style.display="block"
 return true; 
 }  
 function ExpandOff(topicID){
@@ -43,7 +44,8 @@ return true;
 function ExpandToggle(topicID){
 var expand=document.getElementById(topicID);
 if(!expand)return true;
-if(expand.style.display=="none"){  /*expand.style.display="block" */ 
+if(expand.style.display=="none"){  
+  expand.style.display="block" 
 } else {
 expand.style.display="none"
 }
@@ -51,7 +53,7 @@ return true;
 }
   </script>
     
-    [ <span title="Click to see more" class="expand"
+    [ <span id="Click" title="Click to see more" class="expand"
             onClick="return ExpandToggle('topic1')">Click to see more</span>&nbsp;] 
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
