--- a/aboutme.html
+++ b/aboutme.html
@@ -39,6 +39,7 @@ function normalImg(x) {
       onmouseover="bigImg(this)" onmouseout="normalImg(this)">
   </center>
   
+  <textarea rows="4" cols="50">
   <p style="text-align:right;">
     I`m a current student at Midwood High School and <br>   
     all of my interests revolve around engineering and tech. <br> 
@@ -51,6 +52,7 @@ function normalImg(x) {
     this is a project for todays class.<br>
     A portfolio about me!<br>
   </p> 
+    </textarea>
   </div>  
   
     <div class="column">
