--- a/aboutme.html
+++ b/aboutme.html
@@ -39,7 +39,7 @@ function normalImg(x) {
       onmouseover="bigImg(this)" onmouseout="normalImg(this)">
   </center>
   
-  <textarea rows="4" cols="50">
+  <textarea rows="4" cols="50" style="align: right;">
   <p style="text-align:right;">
     I`m a current student at Midwood High School and <br>   
     all of my interests revolve around engineering and tech. <br> 
