--- a/aboutme.html
+++ b/aboutme.html
@@ -62,7 +62,8 @@ function normalImg(x) {
       <h1>Kittens! </h1>
     <p>I think kittens are adorable! Sadly I dont have <br> 
       a kitten of my own but in the near future I would definitely get one! </p> 
-        </div></details>
+        </div>
+      </details>
 
   <div class="column">
   <img id="Bubble" src="https://img.grouponcdn.com/deal/sTNpcAQhCD6vg2gN6eea/Xt-2048x1229/v1/c700x420.jpg" 
