--- a/aboutme.html
+++ b/aboutme.html
@@ -69,7 +69,7 @@ function normalImg(x) {
   <img id="Bubble" src="https://img.grouponcdn.com/deal/sTNpcAQhCD6vg2gN6eea/Xt-2048x1229/v1/c700x420.jpg" 
         onmouseover="bigImg(this)" onmouseout="normalImg(this)" alt="Bubble Tea"> 
      <details>
-      <summary>Kittens!</summary>
+      <summary>Bubbles!</summary>
       <p>Bubble Tea! My favorite is Tairo.<br>
         I usually drink them when Im feeling stressed or tired.</p>
   </div>
