--- a/aboutme.html
+++ b/aboutme.html
@@ -164,7 +164,7 @@ function normalImg(x) {
   </div>
    </details>
   
-  <p id="button">Fun Fact: Click on Button. (Then refresh thanks.)</p>
-<button id="demo" style="vertical-align:middle"><span>Fun Fact</span></button>
+  /*<p id="button">Fun Fact: Click on Button. (Then refresh thanks.)</p>
+<button id="demo" style="vertical-align:middle"><span>Fun Fact</span></button>*/ 
 </body>
 </html>
