--- a/aboutme.html
+++ b/aboutme.html
@@ -30,8 +30,9 @@ function normalImg(x) {
 <h2>Shamima Sharmin</h2>         
   <center>   
     
- <img id="Me" src="http://www.pngmart.com/files/4/Cute-Cartoon-Girl-PNG-Transparent-Picture.png" alt="Cartoon girl" 
-      onmouseover="bigImg(this)" onmouseout="normalImg(this)">
+ <img <span style="cursor:pointer;cursor:hand" 
+    id="Me" src="http://www.pngmart.com/files/4/Cute-Cartoon-Girl-PNG-Transparent-Picture.png" alt="Cartoon girl" 
+    onmouseover="bigImg(this)" onmouseout="normalImg(this)"> </span> 
   </center>
 
   <p style="text-align:right;">
