--- a/Hobbies.html
+++ b/Hobbies.html
@@ -94,7 +94,7 @@ window.onload = function (evt) {
 
  <link rel="stylesheet" href="Hobbies.css"> 
   <div id="Menu">
-          <a href="aboutme.html">Home</a>
+          <a href="aboutme.html" style="color: white;">Home</a>
           <a href="Hobbies.html">Hobbies</a>
 </div>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
