--- a/Hobbies.html
+++ b/Hobbies.html
@@ -95,7 +95,7 @@ window.onload = function (evt) {
  <link rel="stylesheet" href="Hobbies.css"> 
   <div id="Menu">
           <a href="aboutme.html" style="color: white;">Home</a>
-          <a href="Hobbies.html">Hobbies</a>
+          <a href="Hobbies.html" style="color: white;">Hobbies</a>
 </div>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
 <title> Hobbies</title>
