--- a/Hobbies.html
+++ b/Hobbies.html
@@ -1,97 +1,6 @@
 <!doctype html>
 <html>
 <head>
- <script type="text/javascript">
-var collapseDivs, collapseLinks;
- 
-function createDocumentStructure (tagName) {
-  if (document.getElementsByTagName) { 
-    var elements = document.getElementsByTagName(tagName);
-    collapseDivs = new Array(elements.length);
-    collapseLinks = new Array(elements.length);
-    for (var i = 0; i < elements.length; i++) {
-      var element = elements[i];
-      var siblingContainer;
-      if (document.createElement && 
-          (siblingContainer = document.createElement('div')) &&
-          siblingContainer.style) 
-      {
-        var nextSibling = element.nextSibling;
-        element.parentNode.insertBefore(siblingContainer, nextSibling);
-        var nextElement = elements[i + 1];
-        while (nextSibling != nextElement && nextSibling != null) {
-          var toMove = nextSibling;
-          nextSibling = nextSibling.nextSibling;
-          siblingContainer.appendChild(toMove);
-        }
-        siblingContainer.style.display = 'none';
-        
-        collapseDivs[i] = siblingContainer;
-        
-        createCollapseLink(element, siblingContainer, i);
-      }
-      else {
-        // no dynamic creation of elements possible
-        return;
-      } 
-    }  
-    createCollapseExpandAll(elements[0]);
-  }
-}
-
-function createCollapseLink (element, siblingContainer, index) {
-  var span;
-  if (document.createElement && (span = document.createElement('span'))) {
-    span.appendChild(document.createTextNode(String.fromCharCode(160)));
-    var link = document.createElement('a');
-    link.collapseDiv = siblingContainer;
-    link.href = '#';
-    link.appendChild(document.createTextNode('expand'));
-    link.onclick = collapseExpandLink;
-    collapseLinks[index] = link;
-    span.appendChild(link);
-    element.appendChild(span);
-  }
-}
-
-function collapseExpandLink (evt) {
-  if (this.collapseDiv.style.display == '') {
-    this.parentNode.parentNode.nextSibling.style.display = 'none';
-    this.firstChild.nodeValue = 'expand';
-  }
-  else {
-    this.parentNode.parentNode.nextSibling.style.display = '';
-    this.firstChild.nodeValue = 'collapse';
-  }
-
-  if (evt && evt.preventDefault) {
-    evt.preventDefault();
-  }
-  return false;
-}
-
-}
-
-function expandAll (evt) {
-  for (var i = 0; i < collapseDivs.length; i++) {
-    collapseDivs[i].style.display = '';
-    collapseLinks[i].firstChild.nodeValue = 'collapse';
-  }
-  
-  if (evt && evt.preventDefault) {
-    evt.preventDefault();
-  }
-  return false;
-}
-
-
-</script>
-<script type="text/javascript">
-window.onload = function (evt) {
-  createDocumentStructure('h1');
-}
-</script>
-
  <link rel="stylesheet" href="Hobbies.css"> 
   <div id="Menu">
           <a href="aboutme.html" style="color: white;">Home</a>
@@ -100,13 +9,29 @@ window.onload = function (evt) {
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
 <title> Hobbies</title>
 </head>
-<body> <center>
-   <p>
-    Under construction
-    <img id="construction" src="https://images.clipartof.com/small/1217159-Cartoon-Of-A-Wrench-Royalty-Free-Vector-Illustration.jpg" alt="tool">
- </p>
+ 
+<body> 
+ <h1>Playing Volleyball</h1>
+ <img src="" alt=""> 
+ <p>Everytime I have a gym class, I would always choose to play <br>
+ volleyball with my friends. I`m like a superstar but I do spend a lot <br>
+ of time playing and toning my skills. </p>
+ 
 
- </center>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
  <script language="JavaScript">
 //Comment trail script- By Kurt (kurt.grigg@virgin.net)
 //Script featured on Dynamic Drive
