--- a/aboutme.html
+++ b/aboutme.html
@@ -39,7 +39,8 @@ function normalImg(x) {
  
   <p style="text-align:right;">
     I`m a current student at Midwood High School and <br>   
-    all of my interests revolve around engineering and tech. <br> 
+    all of my interests revolve around <br>
+    engineering and tech. <br> 
     I have done hands on engineering <br>
     before at an apprenticeship at NYU Tech. <br>
     I`m taking online courses at Udacity<br>
