--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -17,8 +17,9 @@ x.style.width="300px" ;
 </head>
 
 <body>
+    <center>
 <h1>Smart Solar</h1>
-/*Drop down Menu goes here */ 
+
 <div id="Menu">
     <a href="Home.html">Home</a>
     <a href="About.html">About</a>
@@ -29,5 +30,5 @@ x.style.width="300px" ;
 
     
 
- 
+    </center> 
 </body>
