--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -3,26 +3,23 @@
 <title>Smart Solar</title> 
 <link rel="stylesheet" href="home.css">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<script> 
-function bigImg(x) {
-x.style.height="400px" ; 
-x.style.width="400px" ; 
-}
-function normalImg(x) {
-x.style.height="300px" ; 
-x.style.width="300px" ; 
-}
-</script>
+
 
 </head>
 
 <body>
     <center>
 <h1>Smart Solar</h1>
+        <h2>Home</h2>        
 
 <div id="Menu">
-    <a href="Home.html">Home</a>
-    <a href="About.html">About</a>
+    <div class="dropdown">
+  <button class="dropbtn">Home</button>
+  <div class="dropdown-content">
+    <a href="about.html">About</a>
+  </div>
+</div>
+    <a href="Business.html">Solar Business</a>
     <a href="Contact.html">Contact Us</a>
     <a href="Map.html">Solar Map</a>
 </div>
