--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -13,10 +13,8 @@
         <h2>Home</h2>        
 
 <div id="Menu">
-<div class="dropdown">
-  <div class="dropdown-content">
+    <a href="SmartSolar.html">Home</a>
     <a href="about.html">About</a>
-  </div>
     <a href="Business.html">Solar Business</a>
     <a href="Contact.html">Contact Us</a>
     <a href="Map.html">Solar Map</a>
