--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -33,5 +33,13 @@
         
         </p>
 
+        
+<div id="Menu">
+    <a href="SmartSolar.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="Business.html">Solar Business</a>
+    <a href="Contact.html">Contact Us</a>
+    <a href="Map.html">Solar Map</a>
+</div>
     </center> 
 </body>
