--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -25,7 +25,7 @@
   <div class="overlay">
     <div class="text">Welcome to the Smart Solar Website! <br>
         Learn about solar energy and consider <br>
-      going green! Picture credit to The Qatar</div>
+      going green! Picture credit to The Qatar Consultancy.</div>
   </div>
 </div>
         
