--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -11,11 +11,11 @@
         <h2>Home</h2>         
 
 <div id="Menu">
-    <a href="SmartSolar.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="Business.html">Solar Business</a>
-    <a href="Map.html">Solar Map</a>
-    <a href="Contact.html">Contact Us</a>
+    <a href="SmartSolar.html" style="color: white;" >Home</a>
+    <a href="about.html" style="color: white;" >About</a>
+    <a href="Business.html" style="color: white;" >Solar Business</a>
+    <a href="Map.html" style="color: white;" >Solar Map</a>
+    <a href="Contact.html"style="color: white;" >Contact Us</a>
 </div>
     <!---<p>Hover over the image to see the effect.</p>--> 
 
@@ -45,11 +45,11 @@
 
         
 <div id="Menu">
-    <a href="SmartSolar.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="Business.html">Solar Business</a>
-    <a href="Contact.html">Contact Us</a>
-    <a href="Map.html">Solar Map</a>
+    <a href="SmartSolar.html" style="color: white;" >Home</a>
+    <a href="about.html" style="color: white;" >About</a>
+    <a href="Business.html" style="color: white;" >Solar Business</a>
+    <a href="Contact.html" style="color: white;" >Contact Us</a>
+    <a href="Map.html" style="color: white;" >Solar Map</a>
 </div>
     </center> 
 </body>
