--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -9,12 +9,13 @@
     <center> 
 <h1>Smart Solar</h1>           
 
-<div id="Menu">
+<div id="Menu" class="topnav" id="myTopnav">
     <a href="SmartSolar.html" style="color: white;" >Home</a> 
     <a href="about.html" style="color: white;" >About</a>
     <a href="Business.html" style="color: white;" >Solar Business</a>
     <a href="Map.html" style="color: white;" >Solar Map</a>
     <a href="Contact.html"style="color: white;" >Contact Us</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
     <!---<p>Hover over the image to see the effect.</p>--> 
 <div class="box">
