--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -11,12 +11,14 @@
 
 <div class="topnav" id="myTopnav">
  <!---id="Menu"---> 
+ <center>
     <a href="SmartSolar.html" style="color: white;" >Home</a> 
     <a href="about.html" style="color: white;" >About</a>
     <a href="Business.html" style="color: white;" >Solar Business</a>
     <a href="Map.html" style="color: white;" >Solar Map</a>
     <a href="Contact.html"style="color: white;" >Contact Us</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+ </center> 
 </div>
     <!---Hover over the image to see the effect.--> 
 <div class="box">
