--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -9,8 +9,7 @@
     <center>  
 <h1>Smart Solar</h1>            
 
-<div class="topnav" id="myTopnav">
- <!---id="Menu"---> 
+<div class="topnav" id="myTopnav" id="Menu" > 
  <center>
     <a href="SmartSolar.html" style="color: white;" >Home</a> 
     <a href="about.html" style="color: white;" >About</a>
