--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -9,7 +9,7 @@
     <center>  
 <h1>Smart Solar</h1>            
 
-<div class="topnav" id="myTopnav" id="Menu" > 
+<div id="Menu" class="topnav" id="myTopnav" > 
     <a href="SmartSolar.html" style="color: white;" >Home</a> 
     <a href="about.html" style="color: white;" >About</a>
     <a href="Business.html" style="color: white;" >Solar Business</a>
