--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -24,7 +24,8 @@
        alt="A solar panel picture from The Qatar Consultancy" class="image" height="300px" width="300px" padding="20px">
   <div class="overlay">
     <div class="text">Welcome to the Smart Solar Website! <br>
-        Learn about solar energy and consider going green! <br>
+        Learn about solar energy <br>
+     and consider going green! <br>
      Picture credit to The Qatar Consultancy.</div>
   </div>
 </div>
