--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -47,7 +47,7 @@
         Include oil, gas, 
         
         </p>
-</div? 
+     </div> 
         
 <div class="topnav" id="myTopnav">
     <a href="SmartSolar.html" style="color: white;" >Home</a>
