--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -31,13 +31,13 @@
 </div>
      </div>
         
-     <div class="box1">
-<div class="container1">
-    <div class="P1">
+     <div class="box">
+<div class="container">
+    <div class="P">
      <img src="http://freedesignfile.com/upload/2012/10/Money-3.jpg" 
           alt="Money Image" height="300px" width="300px">
-     <div class="overlay1">
-    <div class="text1">
+     <div class="overlay">
+    <div class="text">
      <p>The world is now moving to a more greener <br>
       place by installing more solar panels. <br>
       Are solar panels worth your money? </p>
