--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -31,13 +31,13 @@
 </div>
      </div>
         
-     <div class="box">
-<div class="container">
+     <div class="1box">
+<div class="1container">
     <div class="P">
-     <img src="http://freedesignfile.com/upload/2012/10/Money-3.jpg" 
+     <1img src="http://freedesignfile.com/upload/2012/10/Money-3.jpg" 
           alt="Money Image" height="300px" width="300px">
-     <div class="overlay">
-    <div class="text">
+     <div class="1overlay">
+    <div class="1text">
      <p>The world is now moving to a more greener <br>
       place by installing more solar panels. <br>
       Are solar panels worth your money? </p>
