--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -3,7 +3,7 @@
 <title>Smart Solar</title> 
 <link rel="stylesheet" href="home.css">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">  
-</head>       
+</head>        
  
 <body>         
     <center>  
@@ -34,7 +34,7 @@
      <div class="1box">
 <div class="1container">
     <div class="P">
-     <1img src="http://freedesignfile.com/upload/2012/10/Money-3.jpg" 
+     <img src="http://freedesignfile.com/upload/2012/10/Money-3.jpg" 
           alt="Money Image" height="300px" width="300px">
      <div class="1overlay">
     <div class="1text">
