--- a/SmartSolar.html
+++ b/SmartSolar.html
@@ -35,7 +35,7 @@
 <div class="1container">
     <div class="P">
      <img src="http://freedesignfile.com/upload/2012/10/Money-3.jpg" 
-          alt="Money Image" height="300px" width="300px">
+          alt="Money Image" height="300px" width="300px" class="1image">
      <div class="1overlay">
     <div class="1text">
      <p>The world is now moving to a more greener <br>
