Update and rename business.html to Business.html

--- a/Business.html
+++ b/Business.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <head>
 <title>Solar Businesses</title>
-<link rel="stylesheet" href="business.css">
+<link rel="stylesheet" href="Business.css">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head> 
-<body> 
+<body>  
   <center>
     <h1>Solar Businesses</h1>              
 
