--- a/Business.html
+++ b/Business.html
@@ -46,7 +46,7 @@
          style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="https://s-media-cache-ak0.pinimg.com/564x/eb/c5/45/ebc545e467810ffc000d3d89a943d549.jpg" 
+    <img src="https://media.consumeraffairs.com/files/cache/logos/sunrun_logo_10610_widget_logo.png" 
          style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
   </div>
 </div>
